--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "~1.13.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.0",
-    "express-session": "^1.11.3",
+    "express-session": "^1.12.1",
     "jade": "~1.11.0",
     "method-override": "^2.3.5",
     "moment": "^2.10.6",
